--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>GUIMINAMFLIX</header>
+    <header>Anaflix</header>
 
     <section class="chamada">
         <div class="chamada-texto">
@@ -28,10 +28,10 @@
     </section>
 
     <section class="categoria">
-        <h2>Filmes e séries</h2>
+        <h2>mapas</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=hD3K8CqRPEw&t=378s">
-                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=_8qjkbP_7L4">
+                <img src="https://img.youtube.com/vi/8qjkbP_7L4/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
                 <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
