--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             <a href="https://www.youtube.com/watch?v=_8qjkbP_7L4">
                 <img src="https://img.youtube.com/vi/_8qjkbP_7L4/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=1GF3R7fmS7U">
+                <img src="https://img.youtube.com/vi/1GF3R7fmS7U/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=dgDVVK-hRac">
+                <img src="https://img.youtube.com/vi/dgDVVK-hRac/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
                 <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
