--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <a href="https://www.youtube.com/watch?v=dgDVVK-hRac">
                 <img src="https://img.youtube.com/vi/dgDVVK-hRac/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=rc6kYXhHX9s">
+                <img src="https://img.youtube.com/vi/rc6kYXhHX9s/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=27LcJiRwrD8">
+                <img src="https://img.youtube.com/vi/27LcJiRwrD8/maxresdefault.jpg" />
             </a>
         </div>
     </section>
