--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
         </div>
 
         <div>
-           <iframe width="560" height="315" src="https://www.youtube.com/embed/PL9vpYDbXGc?si=41oxPeDaSQP5NwgW" ></iframe>
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/IVM1adVdLG0?si=QSmYnqk0HNy4xJrw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
     <section class="categoria">
         <h2>mapas</h2>
         <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=PL9vpYDbXGc">
+                <img src="https://img.youtube.com/vi/PL9vpYDbXGcmaxresdefault.jpg" />
+            </a>
             <a href="https://www.youtube.com/watch?v=_8qjkbP_7L4">
                 <img src="https://img.youtube.com/vi/_8qjkbP_7L4/maxresdefault.jpg" />
             </a>
